# ROS

./: README.md
install/: setup.ps1  setup.sh  setup.zsh
install/p1d2_sai_marthala/share/p1d2_sai_marthala/: package.bash  package.dsv  package.xml
ros2_ws/install/: setup.bash
ros2_ws/install/p1d2_sai_marthala/lib/p1d2_sai_marthala/: draw_n
ros2_ws/install/p1d2_sai_marthala/share/p1d2_sai_marthala/: package.ps1  package.sh  package.zsh
ros2_ws/src/p1d2_sai_marthala/: setup.cfg  setup.py
ros2_ws/src/p1d2_sai_marthala/p1d2_sai_marthala/: n_drawer.py
src/p1d2_sai_marthala/p1d2_sai_marthala/: n_drawer.py
